--- a/containers/env_vllm.toml
+++ b/containers/env_vllm.toml
@@ -1,8 +1,18 @@
-image = "/capstor/store/cscs/swissai/infra01/container-images/evals-vllm-cuda.sqsh"
+image = "/capstor/store/cscs/swissai/infra01/container-images/eval-vllm-26-02-17.sqsh"
 
-mounts = ["/capstor", "/iopsstor", "/users"]
-workdir = "/workspace"
+mounts = [
+    "/users/${USER}",
+    "/capstor/scratch/cscs/${USER}",
+    "/iopsstor/scratch/cscs/${USER}",
+    "/capstor/store/cscs/swissai/infra01",
+    "/capstor/store/cscs/swissai/a06",
+]
+
+writable = true
+
+[env]
+PMIX_MCA_psec="native"
+
 
 [annotations]
-com.hooks.aws_ofi_nccl.enabled = "true"
-com.hooks.aws_ofi_nccl.variant = "cuda12"
+com.hooks.cxi.enabled="false"
